test_cases/pass/p26.lxr
SCRIPT AREA
START SCRIPT
DECLARE CHAR c
c='Z'
IF (c == 'Z')
START IF
    PRINT: "found Z"
END IF
END SCRIPT
