test_cases/fail/f34.lxr
SCRIPT AREA
START SCRIPT
IF ("hello")
START IF
    PRINT: "yes"
END IF
END SCRIPT
